# UETTP

./: .gitignore  CMakeLists.txt  Exceptions.h  getUserInput.h  main.cpp
Algorithm/: Evaluation.cpp  Evaluation.h  ExamDataManipulator.cpp  ExamDataManipulator.h  ExamTTSolutionManipulator.cpp  ExamTTSolutionManipulator.h  InitialSolution.cpp  InitialSolution.h  PeriodChange.h  SCHC.cpp  SCHC.h
Google_tests/: CMakeLists.txt  ExamTTSolutionTest.cpp  TestExamDataAccdbParser.cpp  TestExamDataManipulator.cpp  TestExamDataPopulator.cpp  TestInitialSolution.cpp  TestSCHC.cpp  TestVectorUtils.cpp
data_utils/: AbstractExamDataFileParser.h  ExamDataAccdbParser.cpp  ExamDataAccdbParser.h  ExamDataParserFactory.cpp  ExamDataParserFactory.h  ExamDataPopulator.cpp  ExamDataPopulator.h  ExamDataTxtParser.cpp  ExamDataTxtParser.h  ExamDataXmlParser.cpp  ExamDataXmlParser.h  ExamTTData.h  ExamTTDataBuilder.cpp  ExamTTDataBuilder.h  ExamTTDataImporter.cpp  ExamTTDataImporter.h  ExamTTDataTMP.h  ExamTTFileManager.cpp  ExamTTFileManager.h  ExamTTSolution.h  ExamTTSolutionAccdbExporter.cpp  ExamTTSolutionAccdbExporter.h  ExamTTSolutionImporter.cpp  ExamTTSolutionImporter.h  IExamDataParser.h  RoomType.h
file_utils/: AccdbFileHandler.cpp  AccdbFileHandler.h  TxtFileHandler.cpp  TxtFileHandler.h
file_utils/nlohmann_json/: json.hpp
file_utils/tinyxml2/: tinyxml2.cpp  tinyxml2.h
output_utils/: ConvergenceLogger.cpp  ConvergenceLogger.h  CostLogger.cpp  CostLogger.h  DateTimeProvider.cpp  DateTimeProvider.h  ExamDataLogger.cpp  ExamDataLogger.h  ILogger.h  screenOutput.cpp  screenOutput.h
vectorUtils/: PeriodChange.h  RoomAssignment.h  VectorUtils.cpp  VectorUtils.h
